Frontend: Added the photo for the login block

--- a/CyberPal-Desktop/src/Components/Navbar/index.css
+++ b/CyberPal-Desktop/src/Components/Navbar/index.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 32px;
-    gap: 101px;
+    /* gap: 101px; */
 
     width: 100vw;
 
