--- a/CyberPal-Desktop/src/renderer/App.css
+++ b/CyberPal-Desktop/src/renderer/App.css
@@ -14,8 +14,9 @@
   height: 100vh;
   background-color: var(--dark_purple);
   font-family: sans-serif;
-  overflow-y: hidden;
+  /* overflow-x: hidden; */
   display: flex;
+  /* justify-content: center; */
   padding: 0;
   margin: 0;
 }
@@ -28,7 +29,7 @@ a {
   text-decoration: none;
   height: fit-content;
   width: fit-content;
-  margin: 10px;
+  /* margin: 10px; */
 }
 
 a:hover {
