--- a/CyberPal-Desktop/src/Components/Loginblock/index.css
+++ b/CyberPal-Desktop/src/Components/Loginblock/index.css
@@ -7,11 +7,32 @@
 
     position: relative;
     width: 729.67px;
-    height: 434.73px;
+    height: 425.73px;
 
     /* white */
 
     background: #FFFFFF;
     box-shadow: 0px 2.40076px 30.0095px 7.20229px rgba(0, 0, 0, 0.25);
-    border-radius: 30px;
+    border-radius: 20px;
+}
+
+.login-image{
+    position: absolute;
+    width: 436.13px;
+    height: 430.73px;
+    left: -3px;
+    top: 0px;
+
+    border-radius: 20px 0px 0px 20px;
+}
+
+.login-image-block{
+    width: 436.13px;
+    height: 440.73px;
+
+    border-radius: 20.9007px;
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
 }
