--- a/CyberPal-Desktop/src/Components/Loginblock/index.css
+++ b/CyberPal-Desktop/src/Components/Loginblock/index.css
@@ -27,12 +27,18 @@
 }
 
 .login-image-block{
-    width: 436.13px;
-    height: 440.73px;
+    width: 60%;
+}
 
-    border-radius: 20.9007px;
+.login-content-block{
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 24px;
+}
 
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+.login-title{
+    color: black;
 }
