--- a/CyberPal-Desktop/src/Components/Loginblock/index.css
+++ b/CyberPal-Desktop/src/Components/Loginblock/index.css
@@ -11,7 +11,7 @@
 
     /* white */
 
-    background: #FFFFFF;
+    background: white;
     box-shadow: 0px 2.40076px 30.0095px 7.20229px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
 }
