--- a/CyberPal-Desktop/src/renderer/App.css
+++ b/CyberPal-Desktop/src/renderer/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
+
 :root {
   --dark_purple: #17072B;
   --lightish_purple: #291048;
@@ -8,19 +10,57 @@
   --blue: #2E73EA;
 }
 
- body {
-  position: relative;
-  color: white;
-  /* height: 100vh; */
-  width: 100vw;
+body {
   background-color: var(--dark_purple);
-  font-family: sans-serif;
-  /* overflow-x: hidden; */
-  display: flex;
-  /* justify-content: center; */
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.75;
+  color: white;
+  padding: 0;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+div {
   padding: 0;
   margin: 0;
 }
+
+html {
+  padding: 0;
+  margin: 0;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+p {margin-bottom: 1rem;}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
+h1 {
+  font-size: 3.052rem;
+  font-weight: bolder;
+}
+
+h2 {font-size: 2.441rem;}
+
+h3 {font-size: 1.953rem;}
+
+h4 {font-size: 1.563rem;}
+
+h5 {font-size: 1.25rem;}
+
+small, .text_small {font-size: 0.8rem;}
+.Extra_text_small {font-size: 0.2rem;}
 
 li {
   list-style: none;
@@ -30,7 +70,6 @@ a {
   text-decoration: none;
   height: fit-content;
   width: fit-content;
-  /* margin: 10px; */
 }
 
 a:hover {
