--- a/CyberPal-Desktop/src/renderer/App.css
+++ b/CyberPal-Desktop/src/renderer/App.css
@@ -38,12 +38,14 @@ code {
     monospace;
 }
 
-p {margin-bottom: 1rem;}
+/* p {margin-bottom: 1rem;} */
 
 h1, h2, h3, h4, h5 {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   line-height: 1.3;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
