--- a/CyberPal-Desktop/src/Components/HeroBlock/index.css
+++ b/CyberPal-Desktop/src/Components/HeroBlock/index.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     padding: 32px 64px 32px 64px;
+    box-shadow: inset 0px -17px 14px var(--dark_purple);
 }
 
 .hero-content-block{
