Frontend: Added the extra info card without images

--- a/CyberPal-Desktop/src/Components/ExtraInfoBlock/index.css
+++ b/CyberPal-Desktop/src/Components/ExtraInfoBlock/index.css
@@ -6,7 +6,13 @@
     justify-content: center;
 }
 
-.extra-info-block p {
+.extra-info-block > p {
     width: 30%;
     text-align: center;
+}
+
+.extra-info-cards-block {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
 }
