--- a/CyberPal-Desktop/src/Pages/ManageUsersPage/index.css
+++ b/CyberPal-Desktop/src/Pages/ManageUsersPage/index.css
@@ -1,3 +1,9 @@
 .admin-page-block{
     display: flex;
+    align-items: flex-start;
+    gap: 16px;
+}
+
+.admin-page-content-block{
+    width: 83%;
 }
