--- a/CyberPal-Desktop/src/Pages/ManageUsersPage/index.css
+++ b/CyberPal-Desktop/src/Pages/ManageUsersPage/index.css
@@ -2,8 +2,12 @@
     display: flex;
     align-items: flex-start;
     gap: 16px;
+    margin-right: 16px;
 }
 
 .admin-page-content-block{
     width: 83%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
