--- a/CyberPal-Desktop/src/Components/ToolsMenu/index.css
+++ b/CyberPal-Desktop/src/Components/ToolsMenu/index.css
@@ -1,17 +1,20 @@
 .tools-menu-block{
+    position: relative;
     background-color: blue;
     height: 100%;
-    /* width: 50vw; */
 }
 
 .tools-menu-carousel{
+    position: absolute;
+    left: -10vw;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     cursor: grab;
     gap: 5px;
     height: 100%;
+    background-color: aqua;
 }
 
 .tool-menu-item{
