--- a/CyberPal-Desktop/src/Components/ToolsMenu/index.css
+++ b/CyberPal-Desktop/src/Components/ToolsMenu/index.css
@@ -19,6 +19,9 @@
     height: 100%;
     width: 200px;
     background-color: violet;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .tool-menu-item[data-isOpen="true"]{
