--- a/CyberPal-Desktop/src/Components/ToolsMenu/index.css
+++ b/CyberPal-Desktop/src/Components/ToolsMenu/index.css
@@ -18,7 +18,7 @@
 .tool-menu-item{
     height: 100%;
     width: 200px;
-    background-color: violet;
+    background-color: var(--purple);
     display: flex;
     justify-content: center;
     align-items: center;
