Frontend: Fixed some styling in the login block

--- a/CyberPal-Desktop/src/Components/Loginblock/index.css
+++ b/CyberPal-Desktop/src/Components/Loginblock/index.css
@@ -39,6 +39,10 @@
     gap: 24px;
 }
 
+.login-content-block .p-button {
+    background-color: var(--purple);
+}
+
 .login-title{
     color: black;
 }
