Frontend: Tried the divider in the navbar

--- a/CyberPal-Desktop/src/Components/Navbar/index.css
+++ b/CyberPal-Desktop/src/Components/Navbar/index.css
@@ -18,7 +18,7 @@
     flex-direction: row;
     align-items: flex-start;
     padding: 0px;
-    gap: 16px;
+    /* gap: 16px; */
 }
 
 #chosen-one{
