Frontend: Fixed a little in the navbar styling

--- a/CyberPal-Desktop/src/Components/Navbar/index.css
+++ b/CyberPal-Desktop/src/Components/Navbar/index.css
@@ -16,8 +16,9 @@
 .profile-zone{
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     padding: 0px;
+    /* background-color: blue; */
     /* gap: 16px; */
 }
 
