Frontend: Added hover effect the a tag in the login and signup blocks

--- a/CyberPal-Desktop/src/Components/Loginblock/index.css
+++ b/CyberPal-Desktop/src/Components/Loginblock/index.css
@@ -49,3 +49,8 @@
 .login-title{
     color: var(--dark_purple);
 }
+
+.login-content-block > a:hover {
+    color: var(--blue) !important;
+    text-decoration: underline;
+}
