--- a/CyberPal-Desktop/src/Components/ExtraInfoCard/index.css
+++ b/CyberPal-Desktop/src/Components/ExtraInfoCard/index.css
@@ -36,6 +36,12 @@
     color: var(--dark_purple);
 }
 
+.info-cyan .p-button:hover{
+    background-color: var(--purple) !important;
+    border-color: var(--purple) !important;
+    color: white !important;
+}
+
 .image-cyan{
     box-shadow: 0px 4px 30px var(--cyan);
 }
@@ -49,6 +55,12 @@
     border-color: var(--pink);
 }
 
+.info-pink .p-button:hover{
+    background-color: var(--purple) !important;
+    border-color: var(--purple) !important;
+    color: white !important;
+}
+
 .image-pink{
     box-shadow: 0px 4px 30px var(--pink);
 }
@@ -60,6 +72,12 @@
 .info-blue .p-button{
     background-color: var(--blue);
     border-color: var(--blue);
+}
+
+.info-blue .p-button:hover{
+    background-color: var(--purple) !important;
+    border-color: var(--purple) !important;
+    color: white !important;
 }
 
 .image-blue{
