Frontend: Added the nmap item menu cover

--- a/CyberPal-Desktop/src/Components/ToolsMenu/index.css
+++ b/CyberPal-Desktop/src/Components/ToolsMenu/index.css
@@ -28,3 +28,11 @@
     width: 400px;
     border-radius: 20%;
 }
+
+.child{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
