Frontend: Added the model styling for the openvpn

--- a/CyberPal-Desktop/src/Components/ConnectVpnTable/index.css
+++ b/CyberPal-Desktop/src/Components/ConnectVpnTable/index.css
@@ -8,3 +8,10 @@
 .profile-openvpn-buttons .p-button{
     background-color: var(--lightish_purple);
 }
+
+.openvpn-paths-model-block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
