--- a/CyberPal-Desktop/src/Components/SchedulesTable/index.css
+++ b/CyberPal-Desktop/src/Components/SchedulesTable/index.css
@@ -15,3 +15,33 @@ body .profile-content-table .p-datatable .p-component  {
 body .profile-content-table .p-datatable .p-paginator {
     background-color: var(--purple);
 }
+
+.p-paginator {
+    background-color: var(--purple);
+}
+
+.p-dropdown-label {
+    color: white;
+    font-weight: bold;
+}
+
+.p-paginator .p-paginator-pages a {
+    color: white;
+    font-weight: bold;
+}
+
+.p-paginator .p-paginator-pages .p-highlight a {
+    color: var(--purple);
+    font-weight: bold;
+}
+
+.p-paginator .p-paginator-prev,
+.p-paginator .p-paginator-next {
+    color: white;
+    font-weight: bold;
+}
+  
+.p-paginator .p-paginator-current {
+    color: white;
+    font-weight: 500;
+  }
